a friendly meta commit, #242302

--- a/.gitmodules
+++ b/.gitmodules
@@ -1282,6 +1282,9 @@
 [submodule "av/bf/his"]
 	path = av/bf/his
 	url = .
+[submodule "av/bj/dsa"]
+	path = av/bj/dsa
+	url = .
 [submodule "av/bp/soa"]
 	path = av/bp/soa
 	url = .
