--- a/.gitmodules
+++ b/.gitmodules
@@ -35383,6 +35383,9 @@
 [submodule "xe/mm/jtw"]
 	path = xe/mm/jtw
 	url = .
+[submodule "xe/pm/xbi"]
+	path = xe/pm/xbi
+	url = .
 [submodule "xe/qv/bka"]
 	path = xe/qv/bka
 	url = .
