a friendly meta commit, #242078

--- a/.gitmodules
+++ b/.gitmodules
@@ -37840,6 +37840,9 @@
 [submodule "yy/xd/fzr"]
 	path = yy/xd/fzr
 	url = .
+[submodule "yy/xh/kzz"]
+	path = yy/xh/kzz
+	url = .
 [submodule "yy/xr/xul"]
 	path = yy/xr/xul
 	url = .
