a friendly meta commit, #242770

--- a/.gitmodules
+++ b/.gitmodules
@@ -29974,6 +29974,9 @@
 [submodule "tp/iz/ygb"]
 	path = tp/iz/ygb
 	url = .
+[submodule "tp/jg/ahr"]
+	path = tp/jg/ahr
+	url = .
 [submodule "tp/jh/kuj"]
 	path = tp/jh/kuj
 	url = .
