a friendly meta commit, #242047

--- a/.gitmodules
+++ b/.gitmodules
@@ -29218,6 +29218,9 @@
 [submodule "tc/lf/fpk"]
 	path = tc/lf/fpk
 	url = .
+[submodule "tc/mj/opd"]
+	path = tc/mj/opd
+	url = .
 [submodule "tc/oq/pup"]
 	path = tc/oq/pup
 	url = .
