a friendly meta commit, #243699

--- a/.gitmodules
+++ b/.gitmodules
@@ -30595,6 +30595,9 @@
 [submodule "ty/xt/rca"]
 	path = ty/xt/rca
 	url = .
+[submodule "ty/zt/woo"]
+	path = ty/zt/woo
+	url = .
 [submodule "tz/ab/zzq"]
 	path = tz/ab/zzq
 	url = .
