a friendly meta commit, #244060

--- a/.gitmodules
+++ b/.gitmodules
@@ -15634,6 +15634,9 @@
 [submodule "ke/fs/uov"]
 	path = ke/fs/uov
 	url = .
+[submodule "ke/mz/czb"]
+	path = ke/mz/czb
+	url = .
 [submodule "ke/nx/xqf"]
 	path = ke/nx/xqf
 	url = .
