a friendly meta commit, #243197

--- a/.gitmodules
+++ b/.gitmodules
@@ -16537,6 +16537,9 @@
 [submodule "kw/bm/yjg"]
 	path = kw/bm/yjg
 	url = .
+[submodule "kw/cs/tkb"]
+	path = kw/cs/tkb
+	url = .
 [submodule "kw/dh/tnh"]
 	path = kw/dh/tnh
 	url = .
