a friendly meta commit, #241770

--- a/.gitmodules
+++ b/.gitmodules
@@ -1099,6 +1099,9 @@
 [submodule "ar/zq/ilk"]
 	path = ar/zq/ilk
 	url = .
+[submodule "as/cb/szf"]
+	path = as/cb/szf
+	url = .
 [submodule "as/hs/emb"]
 	path = as/hs/emb
 	url = .
