a friendly meta commit, #243441

--- a/.gitmodules
+++ b/.gitmodules
@@ -2632,6 +2632,9 @@
 [submodule "bs/dj/iyk"]
 	path = bs/dj/iyk
 	url = .
+[submodule "bs/gl/ahw"]
+	path = bs/gl/ahw
+	url = .
 [submodule "bs/gs/qif"]
 	path = bs/gs/qif
 	url = .
