a friendly meta commit, #243898

--- a/.gitmodules
+++ b/.gitmodules
@@ -37516,6 +37516,9 @@
 [submodule "yq/vg/utj"]
 	path = yq/vg/utj
 	url = .
+[submodule "yq/wf/hsy"]
+	path = yq/wf/hsy
+	url = .
 [submodule "yq/wp/zdl"]
 	path = yq/wp/zdl
 	url = .
