a friendly meta commit, #241791

--- a/.gitmodules
+++ b/.gitmodules
@@ -29722,6 +29722,9 @@
 [submodule "tm/ag/btd"]
 	path = tm/ag/btd
 	url = .
+[submodule "tm/br/mrv"]
+	path = tm/br/mrv
+	url = .
 [submodule "tm/cc/enq"]
 	path = tm/cc/enq
 	url = .
