a friendly meta commit, #243123

--- a/.gitmodules
+++ b/.gitmodules
@@ -26989,6 +26989,9 @@
 [submodule "ro/tw/fil"]
 	path = ro/tw/fil
 	url = .
+[submodule "ro/ui/dgg"]
+	path = ro/ui/dgg
+	url = .
 [submodule "ro/vj/wxq"]
 	path = ro/vj/wxq
 	url = .
