a friendly meta commit, #242583

--- a/.gitmodules
+++ b/.gitmodules
@@ -27151,6 +27151,9 @@
 [submodule "rs/am/vee"]
 	path = rs/am/vee
 	url = .
+[submodule "rs/bb/ywm"]
+	path = rs/bb/ywm
+	url = .
 [submodule "rs/be/kmk"]
 	path = rs/be/kmk
 	url = .
