a friendly meta commit, #241080

--- a/.gitmodules
+++ b/.gitmodules
@@ -30883,6 +30883,9 @@
 [submodule "uh/pc/gvh"]
 	path = uh/pc/gvh
 	url = .
+[submodule "uh/pj/pcy"]
+	path = uh/pj/pcy
+	url = .
 [submodule "uh/ua/bqo"]
 	path = uh/ua/bqo
 	url = .
