a friendly meta commit, #241567

--- a/.gitmodules
+++ b/.gitmodules
@@ -24682,6 +24682,9 @@
 [submodule "qc/xr/ltv"]
 	path = qc/xr/ltv
 	url = .
+[submodule "qc/ze/zow"]
+	path = qc/ze/zow
+	url = .
 [submodule "qc/zx/pnj"]
 	path = qc/zx/pnj
 	url = .
