a friendly meta commit, #241740

--- a/.gitmodules
+++ b/.gitmodules
@@ -5584,6 +5584,9 @@
 [submodule "dp/qh/naf"]
 	path = dp/qh/naf
 	url = .
+[submodule "dp/rl/zze"]
+	path = dp/rl/zze
+	url = .
 [submodule "dp/sa/wyk"]
 	path = dp/sa/wyk
 	url = .
