--- a/.gitmodules
+++ b/.gitmodules
@@ -8005,6 +8005,9 @@
 [submodule "fg/fy/wxy"]
 	path = fg/fy/wxy
 	url = .
+[submodule "fg/go/dfv"]
+	path = fg/go/dfv
+	url = .
 [submodule "fg/hj/pgd"]
 	path = fg/hj/pgd
 	url = .
