a friendly meta commit, #242599

--- a/.gitmodules
+++ b/.gitmodules
@@ -39082,6 +39082,9 @@
 [submodule "zu/te/gqa"]
 	path = zu/te/gqa
 	url = .
+[submodule "zu/tu/qzv"]
+	path = zu/tu/qzv
+	url = .
 [submodule "zu/vi/iou"]
 	path = zu/vi/iou
 	url = .
