a friendly meta commit, #241821

--- a/.gitmodules
+++ b/.gitmodules
@@ -8317,6 +8317,9 @@
 [submodule "fl/oi/ijo"]
 	path = fl/oi/ijo
 	url = .
+[submodule "fl/ph/ama"]
+	path = fl/ph/ama
+	url = .
 [submodule "fl/pp/oel"]
 	path = fl/pp/oel
 	url = .
