a friendly meta commit, #243805

--- a/.gitmodules
+++ b/.gitmodules
@@ -11428,6 +11428,9 @@
 [submodule "hk/ir/ffz"]
 	path = hk/ir/ffz
 	url = .
+[submodule "hk/jw/qwt"]
+	path = hk/jw/qwt
+	url = .
 [submodule "hk/ka/ukm"]
 	path = hk/ka/ukm
 	url = .
