a friendly meta commit, #243506

--- a/.gitmodules
+++ b/.gitmodules
@@ -4933,6 +4933,9 @@
 [submodule "df/gx/vpr"]
 	path = df/gx/vpr
 	url = .
+[submodule "df/ia/xoz"]
+	path = df/ia/xoz
+	url = .
 [submodule "df/iv/auq"]
 	path = df/iv/auq
 	url = .
