a friendly meta commit, #241360

--- a/.gitmodules
+++ b/.gitmodules
@@ -38074,6 +38074,9 @@
 [submodule "ze/jz/zvx"]
 	path = ze/jz/zvx
 	url = .
+[submodule "ze/kd/ons"]
+	path = ze/kd/ons
+	url = .
 [submodule "ze/kj/kgy"]
 	path = ze/kj/kgy
 	url = .
