a friendly meta commit, #241965

--- a/.gitmodules
+++ b/.gitmodules
@@ -16666,6 +16666,9 @@
 [submodule "ky/xx/cdf"]
 	path = ky/xx/cdf
 	url = .
+[submodule "ky/zw/fpe"]
+	path = ky/zw/fpe
+	url = .
 [submodule "kz/dp/lek"]
 	path = kz/dp/lek
 	url = .
