a friendly meta commit, #244165

--- a/.gitmodules
+++ b/.gitmodules
@@ -26164,6 +26164,9 @@
 [submodule "qz/vp/aae"]
 	path = qz/vp/aae
 	url = .
+[submodule "qz/ye/ltc"]
+	path = qz/ye/ltc
+	url = .
 [submodule "qz/yk/nrb"]
 	path = qz/yk/nrb
 	url = .
