--- a/.gitmodules
+++ b/.gitmodules
@@ -38371,6 +38371,9 @@
 [submodule "zf/wz/weq"]
 	path = zf/wz/weq
 	url = .
+[submodule "zf/yg/zsh"]
+	path = zf/yg/zsh
+	url = .
 [submodule "zf/yq/yyb"]
 	path = zf/yq/yyb
 	url = .
