a friendly meta commit, #242631

--- a/.gitmodules
+++ b/.gitmodules
@@ -13861,6 +13861,9 @@
 [submodule "jb/yl/edu"]
 	path = jb/yl/edu
 	url = .
+[submodule "jc/aa/abb"]
+	path = jc/aa/abb
+	url = .
 [submodule "jc/ab/ypq"]
 	path = jc/ab/ypq
 	url = .
