a friendly meta commit, #241594

--- a/.gitmodules
+++ b/.gitmodules
@@ -13111,6 +13111,9 @@
 [submodule "iq/ec/jsz"]
 	path = iq/ec/jsz
 	url = .
+[submodule "iq/es/xjz"]
+	path = iq/es/xjz
+	url = .
 [submodule "iq/fa/wgu"]
 	path = iq/fa/wgu
 	url = .
