--- a/.gitmodules
+++ b/.gitmodules
@@ -27322,6 +27322,9 @@
 [submodule "rt/ww/jyn"]
 	path = rt/ww/jyn
 	url = .
+[submodule "rt/yf/dnp"]
+	path = rt/yf/dnp
+	url = .
 [submodule "rt/yw/ddd"]
 	path = rt/yw/ddd
 	url = .
