a friendly meta commit, #242662

--- a/.gitmodules
+++ b/.gitmodules
@@ -22006,6 +22006,9 @@
 [submodule "oj/ek/iov"]
 	path = oj/ek/iov
 	url = .
+[submodule "oj/ew/rcg"]
+	path = oj/ew/rcg
+	url = .
 [submodule "oj/fr/veg"]
 	path = oj/fr/veg
 	url = .
