a friendly meta commit, #242159

--- a/.gitmodules
+++ b/.gitmodules
@@ -39340,6 +39340,9 @@
 [submodule "zz/fy/pdt"]
 	path = zz/fy/pdt
 	url = .
+[submodule "zz/gr/api"]
+	path = zz/gr/api
+	url = .
 [submodule "zz/oh/djd"]
 	path = zz/oh/djd
 	url = .
