--- a/.gitmodules
+++ b/.gitmodules
@@ -16870,6 +16870,9 @@
 [submodule "lb/ro/gnl"]
 	path = lb/ro/gnl
 	url = .
+[submodule "lb/se/esu"]
+	path = lb/se/esu
+	url = .
 [submodule "lb/sz/qrh"]
 	path = lb/sz/qrh
 	url = .
