a friendly meta commit, #243023

--- a/.gitmodules
+++ b/.gitmodules
@@ -14200,6 +14200,9 @@
 [submodule "jg/vs/wcy"]
 	path = jg/vs/wcy
 	url = .
+[submodule "jg/yo/mrq"]
+	path = jg/yo/mrq
+	url = .
 [submodule "jg/yw/ndq"]
 	path = jg/yw/ndq
 	url = .
