a friendly meta commit, #243110

--- a/.gitmodules
+++ b/.gitmodules
@@ -22303,6 +22303,9 @@
 [submodule "on/it/jwz"]
 	path = on/it/jwz
 	url = .
+[submodule "on/iu/epg"]
+	path = on/iu/epg
+	url = .
 [submodule "on/jv/uyt"]
 	path = on/jv/uyt
 	url = .
