--- a/.gitmodules
+++ b/.gitmodules
@@ -26410,6 +26410,9 @@
 [submodule "rd/jp/kvs"]
 	path = rd/jp/kvs
 	url = .
+[submodule "rd/jy/udb"]
+	path = rd/jy/udb
+	url = .
 [submodule "rd/kg/qov"]
 	path = rd/kg/qov
 	url = .
