a friendly meta commit, #242291

--- a/.gitmodules
+++ b/.gitmodules
@@ -37075,6 +37075,9 @@
 [submodule "yl/po/qdh"]
 	path = yl/po/qdh
 	url = .
+[submodule "yl/pq/hml"]
+	path = yl/pq/hml
+	url = .
 [submodule "yl/qo/rum"]
 	path = yl/qo/rum
 	url = .
