a friendly meta commit, #243455

--- a/.gitmodules
+++ b/.gitmodules
@@ -33907,6 +33907,9 @@
 [submodule "wh/dh/udd"]
 	path = wh/dh/udd
 	url = .
+[submodule "wh/dz/epo"]
+	path = wh/dz/epo
+	url = .
 [submodule "wh/ga/obo"]
 	path = wh/ga/obo
 	url = .
