a friendly meta commit, #243072

--- a/.gitmodules
+++ b/.gitmodules
@@ -29350,6 +29350,9 @@
 [submodule "td/zd/dps"]
 	path = td/zd/dps
 	url = .
+[submodule "td/zs/sdw"]
+	path = td/zs/sdw
+	url = .
 [submodule "te/ao/dsr"]
 	path = te/ao/dsr
 	url = .
