a friendly meta commit, #243215

--- a/.gitmodules
+++ b/.gitmodules
@@ -27037,6 +27037,9 @@
 [submodule "rp/fe/bop"]
 	path = rp/fe/bop
 	url = .
+[submodule "rp/fm/axf"]
+	path = rp/fm/axf
+	url = .
 [submodule "rp/hu/oeo"]
 	path = rp/hu/oeo
 	url = .
