a friendly meta commit, #241090

--- a/.gitmodules
+++ b/.gitmodules
@@ -31969,6 +31969,9 @@
 [submodule "vc/oo/ojz"]
 	path = vc/oo/ojz
 	url = .
+[submodule "vc/rf/pue"]
+	path = vc/rf/pue
+	url = .
 [submodule "vc/uz/xra"]
 	path = vc/uz/xra
 	url = .
