a friendly meta commit, #240925

--- a/.gitmodules
+++ b/.gitmodules
@@ -14680,6 +14680,9 @@
 [submodule "jq/oq/nsg"]
 	path = jq/oq/nsg
 	url = .
+[submodule "jq/pt/zcu"]
+	path = jq/pt/zcu
+	url = .
 [submodule "jq/qm/cua"]
 	path = jq/qm/cua
 	url = .
