--- a/.gitmodules
+++ b/.gitmodules
@@ -37600,6 +37600,9 @@
 [submodule "ys/zz/jir"]
 	path = ys/zz/jir
 	url = .
+[submodule "yt/bg/rmp"]
+	path = yt/bg/rmp
+	url = .
 [submodule "yt/cb/rof"]
 	path = yt/cb/rof
 	url = .
