a friendly meta commit, #243880

--- a/.gitmodules
+++ b/.gitmodules
@@ -33796,6 +33796,9 @@
 [submodule "wf/ha/wqw"]
 	path = wf/ha/wqw
 	url = .
+[submodule "wf/kg/apn"]
+	path = wf/kg/apn
+	url = .
 [submodule "wf/lp/tmm"]
 	path = wf/lp/tmm
 	url = .
