a friendly meta commit, #242738

--- a/.gitmodules
+++ b/.gitmodules
@@ -32344,6 +32344,9 @@
 [submodule "vh/cw/xsr"]
 	path = vh/cw/xsr
 	url = .
+[submodule "vh/dj/bah"]
+	path = vh/dj/bah
+	url = .
 [submodule "vh/gl/lcb"]
 	path = vh/gl/lcb
 	url = .
