--- a/.gitmodules
+++ b/.gitmodules
@@ -8359,6 +8359,9 @@
 [submodule "fm/mt/ulx"]
 	path = fm/mt/ulx
 	url = .
+[submodule "fm/rw/ruj"]
+	path = fm/rw/ruj
+	url = .
 [submodule "fm/vu/tji"]
 	path = fm/vu/tji
 	url = .
