a friendly meta commit, #243990

--- a/.gitmodules
+++ b/.gitmodules
@@ -4450,6 +4450,9 @@
 [submodule "cx/vz/wqh"]
 	path = cx/vz/wqh
 	url = .
+[submodule "cx/xz/siu"]
+	path = cx/xz/siu
+	url = .
 [submodule "cx/yo/uag"]
 	path = cx/yo/uag
 	url = .
