a friendly meta commit, #241144

--- a/.gitmodules
+++ b/.gitmodules
@@ -31981,6 +31981,9 @@
 [submodule "vc/wk/cap"]
 	path = vc/wk/cap
 	url = .
+[submodule "vc/ze/rhp"]
+	path = vc/ze/rhp
+	url = .
 [submodule "vd/ap/bti"]
 	path = vd/ap/bti
 	url = .
