--- a/.gitmodules
+++ b/.gitmodules
@@ -11629,6 +11629,9 @@
 [submodule "hm/cu/rqs"]
 	path = hm/cu/rqs
 	url = .
+[submodule "hm/di/xtt"]
+	path = hm/di/xtt
+	url = .
 [submodule "hm/fw/zkp"]
 	path = hm/fw/zkp
 	url = .
