--- a/.gitmodules
+++ b/.gitmodules
@@ -18133,6 +18133,9 @@
 [submodule "lu/kv/dsc"]
 	path = lu/kv/dsc
 	url = .
+[submodule "lu/ky/vzq"]
+	path = lu/ky/vzq
+	url = .
 [submodule "lu/nz/awv"]
 	path = lu/nz/awv
 	url = .
