--- a/.gitmodules
+++ b/.gitmodules
@@ -39475,6 +39475,9 @@
 [submodule "zt/gu/tph"]
 	path = zt/gu/tph
 	url = .
+[submodule "zt/hy/bli"]
+	path = zt/hy/bli
+	url = .
 [submodule "zt/ix/gda"]
 	path = zt/ix/gda
 	url = .
