a friendly meta commit, #246416

--- a/.gitmodules
+++ b/.gitmodules
@@ -37654,6 +37654,9 @@
 [submodule "yo/op/ayy"]
 	path = yo/op/ayy
 	url = .
+[submodule "yo/sq/iwr"]
+	path = yo/sq/iwr
+	url = .
 [submodule "yo/st/ffk"]
 	path = yo/st/ffk
 	url = .
