a friendly meta commit, #245136

--- a/.gitmodules
+++ b/.gitmodules
@@ -33604,6 +33604,9 @@
 [submodule "vz/zz/fqk"]
 	path = vz/zz/fqk
 	url = .
+[submodule "wa/bh/ayk"]
+	path = wa/bh/ayk
+	url = .
 [submodule "wa/ez/mgo"]
 	path = wa/ez/mgo
 	url = .
