a friendly meta commit, #245496

--- a/.gitmodules
+++ b/.gitmodules
@@ -6172,6 +6172,9 @@
 [submodule "dy/zy/xcq"]
 	path = dy/zy/xcq
 	url = .
+[submodule "dz/bn/lrp"]
+	path = dz/bn/lrp
+	url = .
 [submodule "dz/ex/yoq"]
 	path = dz/ex/yoq
 	url = .
