a friendly meta commit, #247465

--- a/.gitmodules
+++ b/.gitmodules
@@ -20800,6 +20800,9 @@
 [submodule "nk/jm/mkc"]
 	path = nk/jm/mkc
 	url = .
+[submodule "nk/ju/qvv"]
+	path = nk/ju/qvv
+	url = .
 [submodule "nk/jx/ezm"]
 	path = nk/jx/ezm
 	url = .
