--- a/.gitmodules
+++ b/.gitmodules
@@ -15829,6 +15829,9 @@
 [submodule "kh/ca/waw"]
 	path = kh/ca/waw
 	url = .
+[submodule "kh/cb/hmr"]
+	path = kh/cb/hmr
+	url = .
 [submodule "kh/cf/oqf"]
 	path = kh/cf/oqf
 	url = .
