a friendly meta commit, #245637

--- a/.gitmodules
+++ b/.gitmodules
@@ -18298,6 +18298,9 @@
 [submodule "lx/ik/sio"]
 	path = lx/ik/sio
 	url = .
+[submodule "lx/jj/wua"]
+	path = lx/jj/wua
+	url = .
 [submodule "lx/kb/wrf"]
 	path = lx/kb/wrf
 	url = .
