--- a/.gitmodules
+++ b/.gitmodules
@@ -30775,6 +30775,9 @@
 [submodule "tx/bp/eio"]
 	path = tx/bp/eio
 	url = .
+[submodule "tx/cm/nla"]
+	path = tx/cm/nla
+	url = .
 [submodule "tx/er/pzb"]
 	path = tx/er/pzb
 	url = .
