--- a/.gitmodules
+++ b/.gitmodules
@@ -39061,6 +39061,9 @@
 [submodule "zo/sg/ghf"]
 	path = zo/sg/ghf
 	url = .
+[submodule "zo/vc/aoh"]
+	path = zo/vc/aoh
+	url = .
 [submodule "zo/vs/ywz"]
 	path = zo/vs/ywz
 	url = .
