--- a/.gitmodules
+++ b/.gitmodules
@@ -35188,6 +35188,9 @@
 [submodule "wx/yy/hab"]
 	path = wx/yy/hab
 	url = .
+[submodule "wy/ce/ldg"]
+	path = wy/ce/ldg
+	url = .
 [submodule "wy/eq/ovk"]
 	path = wy/eq/ovk
 	url = .
