a friendly meta commit, #245155

--- a/.gitmodules
+++ b/.gitmodules
@@ -10171,6 +10171,9 @@
 [submodule "gn/pv/jky"]
 	path = gn/pv/jky
 	url = .
+[submodule "gn/rm/emt"]
+	path = gn/rm/emt
+	url = .
 [submodule "gn/st/fpx"]
 	path = gn/st/fpx
 	url = .
