--- a/.gitmodules
+++ b/.gitmodules
@@ -23095,6 +23095,9 @@
 [submodule "ox/qt/loo"]
 	path = ox/qt/loo
 	url = .
+[submodule "ox/rz/bnt"]
+	path = ox/rz/bnt
+	url = .
 [submodule "ox/tp/uar"]
 	path = ox/tp/uar
 	url = .
