a friendly meta commit, #247233

--- a/.gitmodules
+++ b/.gitmodules
@@ -4570,6 +4570,9 @@
 [submodule "cy/th/sgc"]
 	path = cy/th/sgc
 	url = .
+[submodule "cy/uu/hjz"]
+	path = cy/uu/hjz
+	url = .
 [submodule "cy/vc/wik"]
 	path = cy/vc/wik
 	url = .
