a friendly meta commit, #247016

--- a/.gitmodules
+++ b/.gitmodules
@@ -8866,6 +8866,9 @@
 [submodule "fs/yz/zve"]
 	path = fs/yz/zve
 	url = .
+[submodule "fs/zm/zsf"]
+	path = fs/zm/zsf
+	url = .
 [submodule "ft/au/ksm"]
 	path = ft/au/ksm
 	url = .
