a friendly meta commit, #245832

--- a/.gitmodules
+++ b/.gitmodules
@@ -31249,6 +31249,9 @@
 [submodule "uh/pc/gvh"]
 	path = uh/pc/gvh
 	url = .
+[submodule "uh/pi/xvq"]
+	path = uh/pi/xvq
+	url = .
 [submodule "uh/pj/pcy"]
 	path = uh/pj/pcy
 	url = .
