a friendly meta commit, #244895

--- a/.gitmodules
+++ b/.gitmodules
@@ -32845,6 +32845,9 @@
 [submodule "vn/by/hiy"]
 	path = vn/by/hiy
 	url = .
+[submodule "vn/gc/otk"]
+	path = vn/gc/otk
+	url = .
 [submodule "vn/gd/jss"]
 	path = vn/gd/jss
 	url = .
