a friendly meta commit, #245299

--- a/.gitmodules
+++ b/.gitmodules
@@ -22087,6 +22087,9 @@
 [submodule "oh/xb/ewi"]
 	path = oh/xb/ewi
 	url = .
+[submodule "oi/ba/gqu"]
+	path = oi/ba/gqu
+	url = .
 [submodule "oi/bg/bwo"]
 	path = oi/bg/bwo
 	url = .
