a friendly meta commit, #244542

--- a/.gitmodules
+++ b/.gitmodules
@@ -32239,6 +32239,9 @@
 [submodule "vc/uz/xra"]
 	path = vc/uz/xra
 	url = .
+[submodule "vc/wd/pym"]
+	path = vc/wd/pym
+	url = .
 [submodule "vc/wk/cap"]
 	path = vc/wk/cap
 	url = .
