a friendly meta commit, #245953

--- a/.gitmodules
+++ b/.gitmodules
@@ -37075,6 +37075,9 @@
 [submodule "yf/ab/wnc"]
 	path = yf/ab/wnc
 	url = .
+[submodule "yf/ck/zky"]
+	path = yf/ck/zky
+	url = .
 [submodule "yf/eg/fsn"]
 	path = yf/eg/fsn
 	url = .
