--- a/.gitmodules
+++ b/.gitmodules
@@ -21583,6 +21583,9 @@
 [submodule "nz/ba/fhm"]
 	path = nz/ba/fhm
 	url = .
+[submodule "nz/dh/nkb"]
+	path = nz/dh/nkb
+	url = .
 [submodule "nz/dy/kzr"]
 	path = nz/dy/kzr
 	url = .
