a friendly meta commit, #246972

--- a/.gitmodules
+++ b/.gitmodules
@@ -15928,6 +15928,9 @@
 [submodule "kh/rp/ddv"]
 	path = kh/rp/ddv
 	url = .
+[submodule "kh/tp/aft"]
+	path = kh/tp/aft
+	url = .
 [submodule "kh/tz/ddk"]
 	path = kh/tz/ddk
 	url = .
