a friendly meta commit, #247155

--- a/.gitmodules
+++ b/.gitmodules
@@ -16651,6 +16651,9 @@
 [submodule "kv/fo/cof"]
 	path = kv/fo/cof
 	url = .
+[submodule "kv/gv/bnj"]
+	path = kv/gv/bnj
+	url = .
 [submodule "kv/ho/omj"]
 	path = kv/ho/omj
 	url = .
