--- a/.gitmodules
+++ b/.gitmodules
@@ -19126,6 +19126,9 @@
 [submodule "mk/kf/uye"]
 	path = mk/kf/uye
 	url = .
+[submodule "mk/kk/uvm"]
+	path = mk/kk/uvm
+	url = .
 [submodule "mk/km/iqu"]
 	path = mk/km/iqu
 	url = .
