a friendly meta commit, #247496

--- a/.gitmodules
+++ b/.gitmodules
@@ -11923,6 +11923,9 @@
 [submodule "hr/yk/pxg"]
 	path = hr/yk/pxg
 	url = .
+[submodule "hr/zg/zhz"]
+	path = hr/zg/zhz
+	url = .
 [submodule "hs/ae/gvg"]
 	path = hs/ae/gvg
 	url = .
