a friendly meta commit, #246149

--- a/.gitmodules
+++ b/.gitmodules
@@ -14239,6 +14239,9 @@
 [submodule "jf/rl/ttz"]
 	path = jf/rl/ttz
 	url = .
+[submodule "jf/rx/doy"]
+	path = jf/rx/doy
+	url = .
 [submodule "jf/so/ujm"]
 	path = jf/so/ujm
 	url = .
