a friendly meta commit, #246637

--- a/.gitmodules
+++ b/.gitmodules
@@ -23920,6 +23920,9 @@
 [submodule "pk/ac/ohz"]
 	path = pk/ac/ohz
 	url = .
+[submodule "pk/ar/hio"]
+	path = pk/ar/hio
+	url = .
 [submodule "pk/dj/rkw"]
 	path = pk/dj/rkw
 	url = .
