a friendly meta commit, #247266

--- a/.gitmodules
+++ b/.gitmodules
@@ -29032,6 +29032,9 @@
 [submodule "sr/cm/mqr"]
 	path = sr/cm/mqr
 	url = .
+[submodule "sr/dz/eez"]
+	path = sr/dz/eez
+	url = .
 [submodule "sr/ez/gav"]
 	path = sr/ez/gav
 	url = .
