--- a/.gitmodules
+++ b/.gitmodules
@@ -33166,6 +33166,9 @@
 [submodule "vs/wv/cjd"]
 	path = vs/wv/cjd
 	url = .
+[submodule "vs/xc/qtr"]
+	path = vs/xc/qtr
+	url = .
 [submodule "vt/ce/akd"]
 	path = vt/ce/akd
 	url = .
