a friendly meta commit, #244985

--- a/.gitmodules
+++ b/.gitmodules
@@ -14380,6 +14380,9 @@
 [submodule "jj/en/yze"]
 	path = jj/en/yze
 	url = .
+[submodule "jj/go/onh"]
+	path = jj/go/onh
+	url = .
 [submodule "jj/he/fss"]
 	path = jj/he/fss
 	url = .
