a friendly meta commit, #244247

--- a/.gitmodules
+++ b/.gitmodules
@@ -28879,6 +28879,9 @@
 [submodule "ss/pa/vbr"]
 	path = ss/pa/vbr
 	url = .
+[submodule "ss/qz/tnh"]
+	path = ss/qz/tnh
+	url = .
 [submodule "ss/ul/quh"]
 	path = ss/ul/quh
 	url = .
