a friendly meta commit, #246360

--- a/.gitmodules
+++ b/.gitmodules
@@ -31147,6 +31147,9 @@
 [submodule "uf/dv/fef"]
 	path = uf/dv/fef
 	url = .
+[submodule "uf/gf/vzo"]
+	path = uf/gf/vzo
+	url = .
 [submodule "uf/gz/zge"]
 	path = uf/gz/zge
 	url = .
