a friendly meta commit, #246675

--- a/.gitmodules
+++ b/.gitmodules
@@ -24118,6 +24118,9 @@
 [submodule "pn/xz/ueq"]
 	path = pn/xz/ueq
 	url = .
+[submodule "po/do/ktg"]
+	path = po/do/ktg
+	url = .
 [submodule "po/ef/cqg"]
 	path = po/ef/cqg
 	url = .
