a friendly meta commit, #245226

--- a/.gitmodules
+++ b/.gitmodules
@@ -30328,6 +30328,9 @@
 [submodule "tr/mq/iks"]
 	path = tr/mq/iks
 	url = .
+[submodule "tr/op/ycs"]
+	path = tr/op/ycs
+	url = .
 [submodule "tr/qg/aub"]
 	path = tr/qg/aub
 	url = .
