--- a/.gitmodules
+++ b/.gitmodules
@@ -15823,6 +15823,9 @@
 [submodule "kh/rd/zme"]
 	path = kh/rd/zme
 	url = .
+[submodule "kh/re/mfv"]
+	path = kh/re/mfv
+	url = .
 [submodule "kh/re/nev"]
 	path = kh/re/nev
 	url = .
