a friendly meta commit, #244371

--- a/.gitmodules
+++ b/.gitmodules
@@ -32047,6 +32047,9 @@
 [submodule "uy/uh/qjg"]
 	path = uy/uh/qjg
 	url = .
+[submodule "uy/ut/gag"]
+	path = uy/ut/gag
+	url = .
 [submodule "uy/ux/gtx"]
 	path = uy/ux/gtx
 	url = .
