--- a/.gitmodules
+++ b/.gitmodules
@@ -5086,6 +5086,9 @@
 [submodule "dh/kb/pns"]
 	path = dh/kb/pns
 	url = .
+[submodule "dh/kg/acm"]
+	path = dh/kg/acm
+	url = .
 [submodule "dh/kp/tlh"]
 	path = dh/kp/tlh
 	url = .
