a friendly meta commit, #247187

--- a/.gitmodules
+++ b/.gitmodules
@@ -31591,6 +31591,9 @@
 [submodule "um/dv/knd"]
 	path = um/dv/knd
 	url = .
+[submodule "um/eo/bmy"]
+	path = um/eo/bmy
+	url = .
 [submodule "um/ep/jvl"]
 	path = um/ep/jvl
 	url = .
