a friendly meta commit, #244451

--- a/.gitmodules
+++ b/.gitmodules
@@ -25246,6 +25246,9 @@
 [submodule "qk/qn/lbb"]
 	path = qk/qn/lbb
 	url = .
+[submodule "qk/qv/utm"]
+	path = qk/qv/utm
+	url = .
 [submodule "qk/st/sqp"]
 	path = qk/st/sqp
 	url = .
