a friendly meta commit, #245031

--- a/.gitmodules
+++ b/.gitmodules
@@ -24730,6 +24730,9 @@
 [submodule "qa/ne/kqw"]
 	path = qa/ne/kqw
 	url = .
+[submodule "qa/nl/rna"]
+	path = qa/nl/rna
+	url = .
 [submodule "qa/pk/uan"]
 	path = qa/pk/uan
 	url = .
