a friendly meta commit, #247022

--- a/.gitmodules
+++ b/.gitmodules
@@ -25333,6 +25333,9 @@
 [submodule "qj/sr/qlf"]
 	path = qj/sr/qlf
 	url = .
+[submodule "qj/td/fdu"]
+	path = qj/td/fdu
+	url = .
 [submodule "qj/wq/oaf"]
 	path = qj/wq/oaf
 	url = .
