a friendly meta commit, #246489

--- a/.gitmodules
+++ b/.gitmodules
@@ -25546,6 +25546,9 @@
 [submodule "qn/lg/lci"]
 	path = qn/lg/lci
 	url = .
+[submodule "qn/pc/sfm"]
+	path = qn/pc/sfm
+	url = .
 [submodule "qn/pp/vwo"]
 	path = qn/pp/vwo
 	url = .
